Adding a template doc under draft with common  page attributes and descriptions, fixed the Notes file not rendering issues

--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,8 @@ asciidoctor:
   safe: unsafe
 
 collections:
+  notes:
+    output: true
   docs:
     output: true
 
@@ -31,20 +33,24 @@ defaults:
       path: ""
       type: "notes"
     values:
+      author: "Isuru W."
       layout: "notes"
   - scope:
       path: ""
       type: "docs"
     values:
+      author: "Isuru W."
       layout: "docs"
   - scope:
       path: ""
       type: "posts"
     values:
-      layout: "post"
+      author: "Isuru W."
+      layout: "posts"
   - scope:
       path: ""
     values:
+      author: "Isuru W."
       layout: "default"
 
 exclude:
