adding the tag support and tag generation for all pages, custom tag pages for all but the archive and the related posts only works for posts

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 ### Site Config
 title:               Life
 tagline:             'Life of a Techie'
-description:         'Notes, Lessons-learned, wisdom, travel, hobbies, sports and all other life experiences of a Husband, Father, and a Techie.'
+description:         'Notes, lessons-learned, wisdom, travel-logs, hobbies, sports and all other life experiences of a Husband, Father, and a Techie.'
 # comment the url for local developments
 #url:                  https://life.wijesundara.org
 ###
