--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title:               Life
 tagline:             'Life of a Techie'
 description:         'Notes, lessons-learned, wisdom, travel-logs, hobbies, sports and all other life experiences of a Husband, Father, and a Techie.'
 # comment the url for local developments
-#url:                  https://life.wijesundara.org
+url:                  https://life.wijesundara.org
 ###
 
 google_analytics_id: G-W54HLV2XHH
@@ -71,6 +71,7 @@ exclude:
 
 keep_files:
   - images
+  - jemoji
 
 paginate: 5
 permalink: pretty
