Fixing the social icon issue and adding youtube

--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@ author:
 twitter_username:   nalinda6963
 github_username:    nalinda6963
 linkedin_username:  isuruwijesundara
+youtube_channel: UC6dtuXsC78CZDqFWgYhBx8Q
 ###
 
 asciidoc: {}
