--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title:               Life
 tagline:             'Life of a Techie'
 description:         'Notes, lessons-learned, wisdom, travel-logs, hobbies, sports and all other life experiences of a Husband, Father, and a Techie.'
 # comment the url for local developments
-#url:                  https://life.wijesundara.org
+url:                  https://life.wijesundara.org
 ###
 
 google_analytics_id: G-W54HLV2XHH
@@ -13,6 +13,13 @@ author:
   name:              Isuru Wijesundara
   url:               https://twitter.com/nalinda6963
   email:             isuru.wijesundara@wijesundara.org
+###
+
+### Social IDs
+twitter_username:   nalinda6963
+github_username:    nalinda6963
+linkedin_username:  isuruwijesundara
+youtube_channel: UC6dtuXsC78CZDqFWgYhBx8Q
 ###
 
 asciidoc: {}
@@ -65,13 +72,18 @@ exclude:
 
 keep_files:
   - images
+  - jemoji
 
 paginate: 5
 permalink: pretty
 
+tags:
+
 version: 0.1.0
 
-### Plugins and configurations
+plugins:
+  - jekyll-seo-tag
+
 #plugins:
 #  - jekyll-last-modified-at
 #
