--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ tagline:             'Life of a Techie'
 description:         'Notes, lessons-learned, wisdom, travel-logs, hobbies, sports and all other life experiences of a Husband, Father, and a Techie.'
 # comment the remote url for local developments
 url:                  https://life.wijesundara.org
-#url:                  http://localhost:4000
+#url:                 http://localhost:4000
 
 google_analytics_id: G-W54HLV2XHH
 
@@ -15,10 +15,11 @@ author:
   email:             isuru.wijesundara@wijesundara.org
 
 # Social IDs
-twitter_username:   nalinda6963
+wp_username:        isuruwijesundara
 github_username:    nalinda6963
+twitter_username:   nalinda6963
 linkedin_username:  isuruwijesundara
-youtube_channel: UC6dtuXsC78CZDqFWgYhBx8Q
+youtube_channel:    UC6dtuXsC78CZDqFWgYhBx8Q
 ###
 
 asciidoc: {}
@@ -78,7 +79,6 @@ exclude:
 
 keep_files:
   - images
-  - jemoji
 
 paginate: 5
 
@@ -86,6 +86,7 @@ permalink: pretty
 
 plugins:
   - jekyll-seo-tag
+  - jemoji
 #  - jekyll-feed
 
 tags:
