--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,9 +31,9 @@ jobs:
       #     keys:
       #       - rubygems-v1-{{ checksum "Gemfile.lock" }}
       #       - rubygems-v1-fallback
-      # - run:
-      #     name: Bundle Install
-      #     command: bundle check || bundle install
+      - run:
+          name: Bundle Install
+          command: bundle check || bundle install
       # - save_cache:
       #     key: rubygems-v1-{{ checksum "Gemfile.lock" }}
       #     paths:
