--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,59 +1,110 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/configuration-reference
-version: 2.1
-
-workflows:
-  lifeSite-build-deploy:
-    jobs:
-      - build
-      # - deploy:
-      #     requires:
-      #       - build
-      #     filters:
-      #       branches:
-      #         only: develop
-
-# Orbs are reusable packages of CircleCI configuration that you may share across projects, enabling you to create encapsulated, parameterized commands, jobs, and executors that can be used across multiple projects.
-# See: https://circleci.com/docs/orb-intro/
-orbs:
-  ruby: circleci/ruby@2.0.1
-
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/configuration-reference/#jobs
+version: 2
 jobs:
-  build:
+  checkout_code:
     docker:
-      - image: cimg/ruby:3.1.0
-    executor: ruby/default
+      - image: circleci/ruby:2.7.4
+
+    working_directory: ~/repo
+
     steps:
       - checkout
-      # - restore_cache:
-      #     keys:
-      #       - rubygems-v1-{{ checksum "Gemfile.lock" }}
-      #       - rubygems-v1-fallback
-      - run:
-          name: Bundle Install
-          command: bundle check || bundle install
-      # - save_cache:
-      #     key: rubygems-v1-{{ checksum "Gemfile.lock" }}
-      #     paths:
-      #       - vendor/bundle
-      - run:
-          name: Jekyll build
-          command: bundle exec jekyll build
-      - run:
-          name: HTMLProofer tests
-          command: |
-            bundle exec htmlproofer ./_site \
-              --allow-hash-href \
-              --check-favicon  \
-              --check-html \
-              --disable-external
-      - persist_to_workspace:
-          root: ./
+      - save_cache:
+          key: v1-repo-{{ .Environment.CIRCLE_SHA1 }}
           paths:
-            - _site
+            - ~/repo
+
+  bundle_dependencies:
+    docker:
+      - image: circleci/ruby:2.7.4
+
+    working_directory: ~/repo
+
+    steps:
+      - restore_cache:
+          keys:
+            - v1-repo-{{ .Environment.CIRCLE_SHA1 }}
+      - restore_cache:
+          keys:
+            - v1-bundle-{{ checksum "Gemfile.lock" }}
       - run:
-          name: Push to GitHub
-          command: bundle exec rake deploy
-      - ruby/install-deps
+          name: install builder
+          command : |
+            gem install bundler
+      - run: bundle install --path vendor/bundle
+      - save_cache:
+          key: v1-bundle-{{ checksum "Gemfile.lock" }}
+          paths:
+            - ~/repo/vendor/bundle
+
+  precompile:
+    docker:
+      - image: circleci/ruby:2.7.4
+
+    working_directory: ~/repo
+
+    steps:
+      - restore_cache:
+          keys:
+            - v1-repo-{{ .Environment.CIRCLE_SHA1 }}
+      - restore_cache:
+          keys:
+            - v1-bundle-{{ checksum "Gemfile.lock" }}
+      - run:
+          name: Install Builder
+          command : |
+            gem install bundler            
+      - run: 
+          name: Link Bundle Path
+          command : |
+            bundle --path vendor/bundle
+      - run:
+          name: Precompile Assets
+          command: bundle exec jekyll build
+      - save_cache:
+          key: v1-assets-{{ .Environment.CIRCLE_SHA1 }}
+          paths:
+            - ~/repo
+
+  deploy:
+    machine: true
+
+    working_directory: ~/repo
+
+    steps:
+      - restore_cache:
+          keys:
+            - v1-assets-{{ .Environment.CIRCLE_SHA1 }}
+      - run: echo ${CIRCLE_BRANCH}
+      - run:
+          name: Deploy build to GitHub Pages
+          command: |
+              git config credential.helper 'cache --timeout=120'
+              git config user.email "circleci@wijesundara.org>"
+              git config user.name "CircleCI"
+              git commit --allow-empty -m "Page release ${CIRCLE_BUILD_NUM} from ${CIRCLE_BRANCH}"
+              # Push quietly to prevent showing the token in log
+              git push -q --force https://${GITHUB_TOKEN}@github.com/nalinda6963/life.git ${CIRCLE_BRANCH}:gh-pages
+              git tag -a "release_${CIRCLE_BRANCH}_${CIRCLE_BUILD_NUM}" -m "Release based on build ${CIRCLE_BUILD_NUM}"
+              git push -q --tags https://${GITHUB_TOKEN}@github.com/nalinda6963/life.git
+workflows:
+  version: 2
+  build-and-deploy:
+    jobs:
+      - checkout_code:
+          filters:
+            branches:
+              ignore:
+                - gh-pages
+      - bundle_dependencies:
+          requires:
+            - checkout_code
+      - precompile:
+          requires:
+            - bundle_dependencies
+      - deploy:
+          requires:
+            - precompile
+          filters:
+            branches:
+              only:
+                - develop
