--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,74 +1,53 @@
-version: 2
+workflows:
+  test-deploy:
+    jobs:
+      - build
+      - deploy:
+          requires:
+            - build
+          filters:
+            branches:
+              only: develop
+      - checkout:
+          filters:
+            branches:
+              ignore:
+                - gh-pages
+      - deploy:
+          filters:
+            branches:
+              only:
+                - develop
+version: 2.1
 jobs:
-  checkout_code:
+  build:
     docker:
-      - image: circleci/ruby:2.7.4
-
-    working_directory: ~/repo
-
+      - image: cimg/ruby:2.7.4
+    environment:
+      BUNDLE_PATH: ~/repo/vendor/bundle
     steps:
       - checkout
+      - restore_cache:
+          keys:
+            - rubygems-v1-{{ checksum "Gemfile.lock" }}
+            - rubygems-v1-fallback
+      - run:
+          name: Bundle Install
+          command: bundle check || bundle install
       - save_cache:
-          key: v1-repo-{{ .Environment.CIRCLE_SHA1 }}
+          key: rubygems-v1-{{ checksum "Gemfile.lock" }}
           paths:
-            - ~/repo
-
-  bundle_dependencies:
-    docker:
-      - image: circleci/ruby:2.7.4
-
-    working_directory: ~/repo
-
-    steps:
-      - restore_cache:
-          keys:
-            - v1-repo-{{ .Environment.CIRCLE_SHA1 }}
-      - restore_cache:
-          keys:
-            - v1-bundle-{{ checksum "Gemfile.lock" }}
+            - vendor/bundle
       - run:
-          name: install builder
-          command : |
-            gem install bundler
-      - run: bundle install --path vendor/bundle
-      - save_cache:
-          key: v1-bundle-{{ checksum "Gemfile.lock" }}
-          paths:
-            - ~/repo/vendor/bundle
-
-  precompile:
-    docker:
-      - image: circleci/ruby:2.7.4
-
-    working_directory: ~/repo
-
-    steps:
-      - restore_cache:
-          keys:
-            - v1-repo-{{ .Environment.CIRCLE_SHA1 }}
-      - restore_cache:
-          keys:
-            - v1-bundle-{{ checksum "Gemfile.lock" }}
-      - run:
-          name: Install Builder
-          command : |
-            gem install bundler            
-      - run: 
-          name: Link Bundle Path
-          command : |
-            bundle --path vendor/bundle
-      - run:
-          name: Precompile Assets
+          name: Jekyll build
           command: bundle exec jekyll build
-      - save_cache:
-          key: v1-assets-{{ .Environment.CIRCLE_SHA1 }}
+      - persist_to_workspace:
+          root: ./
           paths:
-            - ~/repo
-
+            - _site
   deploy:
-    machine: true
-
-    working_directory: ~/repo
+    docker:
+      - image: cimg/ruby:2.7.4
 
     steps:
       - restore_cache:
@@ -86,25 +65,3 @@ jobs:
               git push -q --force https://${GITHUB_TOKEN}@github.com/nalinda6963/life.git ${CIRCLE_BRANCH}:gh-pages
               git tag -a "release_${CIRCLE_BRANCH}_${CIRCLE_BUILD_NUM}" -m "Release based on build ${CIRCLE_BUILD_NUM}"
               git push -q --tags https://${GITHUB_TOKEN}@github.com/nalinda6963/life.git
-workflows:
-  version: 2
-  build-and-deploy:
-    jobs:
-      - checkout_code:
-          filters:
-            branches:
-              ignore:
-                - gh-pages
-      - bundle_dependencies:
-          requires:
-            - checkout_code
-      - precompile:
-          requires:
-            - bundle_dependencies
-      - deploy:
-          requires:
-            - precompile
-          filters:
-            branches:
-              only:
-                - develop
