--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,8 +39,8 @@ jobs:
           command: bundle exec jekyll build
       - persist_to_workspace:
           root: ./
-#          paths:
-#            - _site
+          paths:
+            - ~/repo
   deploy:
     docker:
       - image: cimg/ruby:2.7.4
